# Fetcher-Simulator

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: codex-windows-client.yml  fetcher-tester-tools.yml  macos.yml  openbsd-experimental.yml  push.yml  release.yml  ubuntu.yml  windows.yml
CI/: Build-FetcherClientInventory.ps1  Build-FetcherTesterTools.ps1  Build-UbuntuMyGUI.sh  Build-UbuntuRecast.sh  Configure-FetcherPortableClient.ps1  FETCHER_UPDATER_INTEGRATION.md  Package-UbuntuRelease.sh  Package-WindowsClientMods.ps1  Publish-StableGitHubRelease.ps1  Store-Symbols.ps1  Test-UbuntuPackage.sh  before_script.macos.sh  before_script.msvc.sh  deps_versions.msvc.sh  install_debian_deps.sh  write_gns_bat.py
CI/bardcraft-patch/: Apply-Fetcher-Bardcraft-MPPatch.ps1  README.md  build_patch.py
CI/bardcraft-patch/tests/: test_build_patch.py
CI/patches/: gamenetworkingsockets-openbsd.patch  gamenetworkingsockets-winmm-timer.patch
CI/release-root/: Apply-Fetcher-Public-Test-Config.bat  Apply-Fetcher-Public-Test-Config.ps1  Apply-Fetcher-ZHI-Compatibility.ps1  FETCHER_SIMULATOR_README.txt  Install-Fetcher-Bardcraft-With-UMO.bat  Install-Fetcher-Bardcraft-With-UMO.ps1  Install-Fetcher-Tester-Tools.ps1  Join-Fetcher-Test-Channel.bat  Launch-Fetcher-Character.bat  Launch-Fetcher-Character.ps1  Update-Fetcher-Simulator.bat  Update-Fetcher-Simulator.ps1  fetcher-bardcraft-umo.json  fetcher-client-patches.json
CI/starwind-patch/: Apply-Fetcher-Starwind-CompatibilityPatch.ps1  Build-FetcherStarwindPatch.ps1  README.md
CI/zhi-patch/: Build-FetcherZhiPatch.ps1
apps/components_tests/: CMakeLists.txt
apps/components_tests/lua/: testplayerscriptstate.cpp  testscriptscontainer.cpp  teststorage.cpp
apps/components_tests/openmw-mp/: playerinventory.cpp  playerinventorydatabase.cpp  playerjournal.cpp  playerjournaldatabase.cpp
apps/openmw/: CMakeLists.txt  engine.cpp  engine.hpp  main.cpp  options.cpp  options.hpp
apps/openmw-server/: AdminHttpServer.cpp  AdminHttpServer.hpp  CMakeLists.txt  LuaServerContext.cpp  LuaServerContext.hpp  MasterServerClient.cpp  MasterServerClient.hpp  MpEventQueue.hpp  OutboundQueue.hpp  PlayerDatabase.cpp  PlayerDatabase.hpp  PlayerMark.hpp  ScriptEngine.cpp  ScriptEngine.hpp  ScriptEngine.inl  Server.cpp  Server.hpp  main.cpp
apps/openmw-server/bindings/: PlayerBindings.cpp  PlayerBindings.hpp  ServerBindings.cpp  ServerBindings.hpp  TypesStubBindings.cpp  TypesStubBindings.hpp
apps/openmw-server/scripts/: admin_ui_service.lua  bardcraft_generated_bards.lua  bardcraft_network_policy.lua  bardcraft_persistence.lua  command_registry.lua  config.lua  core.lua  custom_speech_commands.lua  custom_speech_data.lua  destructible_spawners.lua  extended_speech_commands.lua  intent_policy.lua  mark_recall.lua  mod_manifest.lua  race_speech_commands.lua  recorddynamic_test.lua  recordstore.lua  server.omwscripts  speech_commands.lua  speech_data.lua  starwind_speech_commands.lua  starwind_speech_data.lua  surf_commands.lua  surf_timer.lua  test_callbacks.lua
apps/openmw/mwbase/: journal.hpp  luamanager.hpp  mechanicsmanager.hpp  statemanager.hpp  windowmanager.hpp  world.hpp
apps/openmw/mwclass/: book.cpp  creature.cpp  creaturelevlist.cpp  creaturelevlist.hpp  npc.cpp
apps/openmw/mwdialogue/: journalimp.cpp  journalimp.hpp
apps/openmw/mwgui/: bookwindow.cpp  bookwindow.hpp  charactercreation.cpp  charactercreation.hpp  console.cpp  container.cpp  containeritemmodel.cpp  inventorywindow.cpp  (+11 more)
apps/wizard/: existinginstallationpage.cpp  importpage.cpp  importpage.hpp  mainwizard.cpp
cmake/: FindMyGUI.cmake
components/: CMakeLists.txt
components/debug/: debugging.cpp  debuglog.cpp
components/files/: windowspath.cpp
components/fontloader/: fontloader.cpp  fontloader.hpp
components/lua/: luastate.cpp  luastate.hpp  playerscriptstate.cpp  playerscriptstate.hpp  scriptscontainer.cpp  scriptscontainer.hpp  storage.cpp  storage.hpp
components/lua_ui/: widget.cpp  window.cpp
components/myguiplatform/: myguidatamanager.cpp  myguidatamanager.hpp  myguiloglistener.cpp  myguiloglistener.hpp  myguirendermanager.cpp  myguirendermanager.hpp
components/openmw-mp/: NetworkMessages.hpp
components/settings/: values.hpp
components/widgets/: box.cpp  box.hpp  fontwrapper.hpp  imagebutton.cpp  imagebutton.hpp  list.cpp  list.hpp
docs/: admin-ui-system.md  exterior-actor-sync-plan.md  multiplayer-journal-persistence.md  phase_8.md  recorddynamic-system.md
files/: settings-default.cfg
files/data/: CMakeLists.txt
scripts/: New-MpClientModBundle.ps1  build-server.sh  codex-windows-client-workflow.ps1  generate_mod_manifest.py  generate_server_speech_data.py
tools/mp-test/: launch_client1.bat  launch_client2.bat
(+193 files in other folders)
